--- a/css/style.css
+++ b/css/style.css
@@ -868,6 +868,7 @@ a {
   }
   .subheader_btn {
     width: 110px;
+    font-size: 8px;
   }
   .subheader_btn:hover {
     background: linear-gradient(0deg, #1eacc7 0%, #4ce2ff 100%);
